ch6_security/lab6.4/second.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secondapp
  labels:
    name: secondapp
spec:
  serviceAccount: secret-access-sa
  # securityContext:
  #   runAsUser: 1000
  containers:
    - name: webserver
      image: nginx
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 80
    - name: secondapp
      image: busybox
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      command:
        - "sleep"
        - "3600"
      securityContext:
        runAsUser: 2000
        allowPrivilegeEscalation: false
        capabilities:
          add:
            - "NET_ADMIN"
            - "SYS_TIME"
      volumeMounts:
        - mountPath: /mysqlpassword
          name: mysql
  volumes:
    - name: mysql
      secret:
        secretName: lfsecret
