ch6_security/lab6.4/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: secondapp
  name: secondapp
spec:
  clusterIP: 10.100.73.68
  clusterIPs:
    - 10.100.73.68
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - nodePort: 32000
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: secondapp
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
