ch6_security/lab6.4/network_policy_all_closed.yaml
# The policy onlyhas effect when the network plugin, likeProject Calico,
# are capable of honoring them. If used with a plugin likeflannelthey
# will have no effect.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
